Fix new related task not being visible in the search field

--- a/src/styles/components/taskRelations.scss
+++ b/src/styles/components/taskRelations.scss
@@ -26,12 +26,6 @@
     }
   }
 
-  .multiselect__input {
-    width: 90% !important;
-    padding-left: 5px !important;
-    z-index: 1;
-  }
-
   .none {
     font-style: italic;
     text-align: center;
